--- a/asstes/scss/_header_footer.scss
+++ b/asstes/scss/_header_footer.scss
@@ -18,11 +18,47 @@
         gap: 32px;
 
         .rightside {
-          display: flex;
-          align-items: center;
-          gap: 5px;
-          .lang {
+          position: relative;
+
+          .langBtn {
+            border: none;
+            cursor: pointer;
+            background-color: transparent;
             color: #fff;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+            letter-spacing: -0.16px;
+            display: flex;
+            align-items: center;
+            .lang {
+              color: #fff;
+              margin-left: 8px;
+            }
+          }
+          .langList {
+            position: absolute;
+            top: 20px;
+            background-color: #e62b2e;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            padding: 10px;
+            border: 2px solid white;
+            border-radius: 10px;
+            .langItem {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              color: #fff;
+              img {
+                width: 20px;
+                height: 20px;
+              }
+            }
           }
         }
       }
@@ -40,10 +76,21 @@
             color: #fff;
             font-size: 16px;
           }
-          button {
+          .menu-toggle {
             color: #fff;
             font-size: 16px;
           }
+        }
+        .burgerMenu {
+          border: none;
+        }
+        .navItem:nth-child(1) {
+          background-color: rgba(255, 255, 255, 0.06);
+          padding: 6px 8px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
         .navItem:nth-child(2) {
           background-color: #fc3d40;
@@ -84,7 +131,7 @@
           border-radius: 20px;
           display: inline-block;
           position: relative;
-          button {
+          .menu-toggle {
             position: relative;
             display: flex;
             align-items: center;
@@ -125,6 +172,61 @@
           background-color: rgba(255, 255, 255, 0.06);
           padding: 6px 24px;
           border-radius: 20px;
+        }
+      }
+    }
+  }
+  .mobileMenu {
+    display: none;
+    width: 100%;
+    background-color: #fc3d40;
+    .mobileList {
+      width: 100%;
+      .mobileİtem {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #fff;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%;
+        padding: 16px 24px;
+      }
+      .categoriesMobileList {
+        width: 100%;
+        background-color: #fff;
+        overflow-y: auto;
+        max-height: 100vh;
+        transition: max-height 0.3s ease;
+        .categoriesMobileİtem {
+          width: 100%;
+          .categorieCard {
+            display: flex;
+            gap: 10%;
+            .categorieImage {
+              width: 40%;
+              padding: 10px;
+              img {
+                width: 100%;
+                object-fit: contain;
+              }
+            }
+            .categorieInfo {
+              width: 50%;
+              display: flex;
+              align-items: center;
+              gap: 10px;
+
+              a {
+                color: #1e1e1e;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+              }
+            }
+          }
         }
       }
     }
@@ -231,7 +333,12 @@
 @media (max-width: 882px) {
   .header {
     width: 100%;
+    background-color: #fc3d40;
+    margin: 0;
+    padding: 16px 20px;
+    position: relative;
     .container {
+      margin: 0;
       .headerContent {
         .logo {
           .rightside {
@@ -240,6 +347,11 @@
         }
         .navBar {
           .navList {
+            .navItem {
+              border-radius: 24px;
+              border: 1px solid #fff;
+              background: rgba(255, 255, 255, 0.12);
+            }
             .navItem:nth-child(1) {
               display: none;
             }
@@ -252,6 +364,12 @@
           }
         }
       }
+    }
+    .mobileMenu {
+      display: flex;
+      position: absolute;
+      top: 120px;
+      left: 0;
     }
   }
 }
@@ -277,7 +395,7 @@
           }
         }
       }
-      .footerBottom{
+      .footerBottom {
         display: flex;
         flex-direction: column;
         gap: 24px;
