--- a/asstes/scss/_slider.scss
+++ b/asstes/scss/_slider.scss
@@ -115,6 +115,7 @@
       padding: 0;
       img {
         width: 100%;
+        height: 300px;
         object-fit: cover;
         border-radius: 26px;
       }
@@ -123,6 +124,18 @@
   
   .partnersSlider {
     width: 100%;
-    margin-top: 96px;
+    
+  }
+}
+
+
+
+@media(max-width:480px){
+  .slider{
+    .swiper{
+      .partnersSlider{
+        height: 430px;
+      }
+    }
   }
 }
